# aiopromql

./: .gitignore  CONTRIBUTING.md  Dockerfile.test  Makefile  README.md  async_client.py  base.py  client.py  example.py  main.py  prometheus_connect.py  pyproject.toml  result_schema.py  sync_client.py
.github/workflows/: code-quality.yml  tests.yml
aiopromql/: __init__.py  client.py  utils.py
aiopromql/models/: core.py  prometheus.py
docs/source/: conf.py
examples/: example.py  example2.py  example3.py
models/: core.py  prometheus.py
tests/: test_client.py  test_models.py
tests/integration/: test_prometheus.py  wait_for_prometheus.py
