[project]
name = "aiopromql"
version = "0.1.1"
description = "Minimalist, Pythonic Prometheus HTTP client that supports both async and sync usage"
authors = [{ name = "Ozay Tokgozlu", email = "ozay.tokgozlu@venit.org" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "hatch", "pytest-asyncio"]

[tool.ruff]
line-length = 88
target-version = "py39"
lint.select = ["E", "F", "I"]  # Error, pyflakes, isort

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"